fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -552,6 +552,7 @@ body {
 
 .About {
   padding: 2rem 2rem;
+  padding-bottom: 5rem;
   text-align: center;
   max-width: 800px;
   margin: 0 auto;
